# Antigravity-Auto

./: .gitignore  Command Centre.bat  FEATURE_EPIC.md  INSTALL.ps1  Launch Supervisor.bat  README.md  SETUP.bat  SETUP.html  SETUP.md  SUPERVISOR_TECHNICAL_REFERENCE.md  ag-commands.txt  check_results.json  check_setup.bat  crash_log.txt  fix_bat_syntax.py  fix_dashes.py  fix_en_dashes.py  fix_math_dashes.py  fix_md_lists.py  fix_setup_html.py  lighthouse_example_report.md  pyproject.toml  requirements.txt  rewrite_check_setup.py  rollback_supervisor.cmd  tmp_bounds.txt  tmp_err.txt  tmp_verify.txt  tmp_verify2.txt  tmp_view.txt  tmp_view2.txt
.ag-tmp/: prompt_0005b3c3ab6b44d6a613fe19e8bc5c56.txt  prompt_30ca4a9630bf4181a1eda24bdcbf6262.txt  prompt_407a6ae54e1f454a8c5b5edd98056d08.txt  prompt_41c794519a4948a5a690e19ae98194b9.txt  prompt_42fa5e90d8fa461f9e7800750f01d26b.txt  prompt_71901fc20a714f2f958dce08e5f389fd.txt  prompt_7eaf8b6fb1c14fbd8dec5f209531fa41.txt  prompt_8928888fb8c14502ba929b42915ef60d.txt  prompt_8c93583d2be54096b252bd92f470aee3.txt  prompt_bbeb5672691c420b9f8f4ac9a155c592.txt  prompt_cdbbbf5154d24866a06256d7eb0b1d44.txt  prompt_fe937a0ffa1342eea00bd62200b05189.txt
supervisor/: Dockerfile.sandbox  __init__.py  __main__.py  _best_model_cache.json  _cron_jobs.json  _daily_budget.json  _failover_state.json  _lite_usage.json  _quota_probe.json  _session_state.json  _supervisor_state_ref.py  a2a_protocol.py  agent_council.py  agent_manager.py  api_server.py  approver.py  autonomous_verifier.py  bootstrap.py  brain.py  chat_handler.py  cli_worker.py  config.py  (+66 more)
(+41 files in other folders)
